--- a/frontend/src/app/users/users.component.html
+++ b/frontend/src/app/users/users.component.html
@@ -47,7 +47,19 @@
         </div>
           <div class="modal-body">
             <form class="user-form" (ngSubmit)="saveDetails()" [formGroup]="userForm">
-                <input type="hidden" formControlName="user_id" [(ngModel)]="this.userId">  
+                <input type="hidden" formControlName="user_id" [(ngModel)]="this.userId">
+                  <div class="form-group" [ngClass]="{'alert alert-danger': (userForm.get('role').touched || userForm.get('role').dirty) && !userForm.get('role').valid }">
+                    <label class="control-label">Role</label>
+                    <select class="form-control" id="role" name="role" formControlName="role" [(ngModel)]="this.userRole">
+                        <option value="">Select Role</option>
+                        <option value="Admin">Admin</option>
+                        <option value="User">User</option>
+                    </select>
+                    <!--<input class="form-control" type="text" placeholder="First Name" formControlName="first_name" [(ngModel)]="this.firstName">-->
+                    <span class="help-block" *ngIf="(userForm.get('role').touched || userForm.get('role').dirty) && userForm.get('role').errors">
+                      <span *ngIf="userForm.get('role').errors?.required">Role is required.</span>                        
+                    </span>
+                  </div>  
                   <div class="form-group" [ngClass]="{'alert alert-danger': (userForm.get('first_name').touched || userForm.get('first_name').dirty) && !userForm.get('first_name').valid }">
                       <label class="control-label">First Name</label>
                       <input class="form-control" type="text" placeholder="First Name" formControlName="first_name" [(ngModel)]="this.firstName">
