Contact and aboutus page added

--- a/frontend/src/app/_layout/front/footer/footer.component.html
+++ b/frontend/src/app/_layout/front/footer/footer.component.html
@@ -35,7 +35,7 @@
                   <ul>
                     <li>Email: yashvanty@gmail.com</li>
                     <li>Phone:  +(91) 9642796505</li>
-                    <li>E-301 Infotower infocity, Gandhinagar, Gujarat-382016</li>
+                    <li>E-301, GIDC, Gandhinagar, Gujarat-382016</li>
                   </ul>
                 </div>
               </div>								
