--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -24,7 +24,7 @@
 					<!-- Contact Form -->
 					<div class="col-lg-6">
 						<div class="contact_form">
-							<div class="contact_info_title">Contact Form</div>
+							<div class="contact_info_title">Let’s Get in Touch</div>
 							<form action="#" class="comment_form">
 								<div>
 									<div class="form_title">Name</div>
@@ -39,7 +39,7 @@
 									<textarea class="comment_input comment_textarea" required="required"></textarea>
 								</div>
 								<div>
-									<button type="submit" class="comment_button trans_200">submit now</button>
+									<button type="submit" class="comment_button trans_100">submit</button>
 								</div>
 							</form>
 						</div>
@@ -48,10 +48,6 @@
 					<!-- Contact Info -->
 					<div class="col-lg-6">
 						<div class="contact_info">
-							<div class="contact_info_title">Contact Info</div>
-							<div class="contact_info_text">
-								<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a distribution of letters.</p>
-							</div>
 							<div class="contact_info_location">
 								<div class="contact_info_location_title">Office Address</div>
 								<ul class="location_list">
