Service page added

--- a/frontend/src/app/_layout/front/header/header.component.html
+++ b/frontend/src/app/_layout/front/header/header.component.html
@@ -41,7 +41,8 @@
             <nav class="main_nav_contaner ml-auto">
               <ul class="main_nav">
                 <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/">Home</a></li>
-                <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home/about">About</a></li>
+                <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home/services">Services</a></li>
+                <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home/about">About Us</a></li>
                 <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home/contact">Contact US</a></li>
               </ul>
               
