home page changes

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -41,3 +41,78 @@
     </div>
   </div>
 </div>
+<div class="team">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="section_title_container text-center">
+						<h2 class="section_title">Technologies we work</h2>
+						<div class="section_subtitle"><p>We are an end-to-end technology solution development company helping clients in developing custom mobile & web solutions along with backend development, cloud deployment and custom integrations</p></div>
+					</div>
+				</div>
+			</div>
+			<div class="row team_row">
+				
+				<!-- Team Item -->
+				<div class="col-lg-3 col-md-6 team_col">
+					<div class="team_item">
+						<div class="team_body">
+                <div class="team_title"><strong>Php Technology</strong></div>						
+							<div class="team_image">
+								<ul>
+									<li><img src="assets/images/mysql-php-logos.png" alt=""></li>									
+								</ul>
+              </div>              
+						</div>
+					</div>
+				</div>
+
+				<!-- Team Item -->
+				<div class="col-lg-3 col-md-6 team_col">
+					<div class="team_item">
+						<div class="team_body">	
+                <div class="team_title"><strong>Codeigniter</strong></div>						
+							<div class="team_image">
+								<ul>
+                  <li><img src="assets/images/Codeigniter.png" alt=""></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+        </div>
+        
+        <!-- Team Item -->
+				<div class="col-lg-3 col-md-6 team_col">
+            <div class="team_item">
+              <div class="team_body">	
+                  <div class="team_title"><strong>Angular</strong></div>						
+                <div class="team_image">
+                  <ul>
+                    <li><img src="assets/images/angular-js-logo.png" alt=""></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <!-- Team Item -->
+				<div class="col-lg-3 col-md-6 team_col">
+            <div class="team_item">
+              <div class="team_body">	
+                  <div class="team_title"><strong>Node Js</strong></div>						
+                <div class="team_image">
+                  <ul>
+                    <li><img src="assets/images/nodejs-logo.png" alt=""></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+			
+
+		
+
+			</div>
+		</div>
+	</div>
