--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -27,3 +27,29 @@
 	width: 100%;
 	height: 100%;
 }
+
+.team {
+    width: 100%;
+    padding-top: 5px;
+	padding-bottom: 10px;
+}
+
+.team_body {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 24px;
+    background: #FFFFFF;
+    border-radius: 6px;
+    -webkit-box-shadow: 0px 1px 10px rgba(29,34,47,0.1);
+    box-shadow: 0px 1px 10px rgba(29,34,47,0.1);
+    text-align: center;
+    -webkit-transition: all 200ms ease;
+    transition: all 200ms ease;
+}
+
+.features {
+    width: 100%;
+    background: #FFFFFF;
+    padding-top: 93px;
+    padding-bottom: 20px;
+}
