--- a/frontend/src/app/services/services.component.html
+++ b/frontend/src/app/services/services.component.html
@@ -21,135 +21,76 @@
       <!-- Course -->
       <div class="col-lg-12">        
         <div class="course_container">
-          <div class="course_title">Services</div>
-          <!-- Course Image -->
-          <div class="course_image"><img src="assets/images/course_image.jpg" alt=""></div>
-          <!-- Course Tabs -->
-          <div class="course_tabs_container">
-            <div class="tabs d-flex flex-row align-items-center justify-content-start">
-              <div class="tab active">description</div>
-              <div class="tab">curriculum</div>
-              <div class="tab">reviews</div>
-            </div>
+          <div class="tab_panel_title">Our Services</div>
+              <!-- Course Tabs -->           
             <div class="tab_panels">
-              <!-- Description -->
-              <div class="tab_panel active">
-                <div class="tab_panel_title">Services</div>
+              <!-- Description -->             
                 <div class="tab_panel_content">
                   <div class="tab_panel_text">
-                    <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosquad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Lorem Ipsn gravida nibh vel velit auctor aliquet. Class aptent taciti sociosquad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                    <p>Yash Compusoft is a design and user–focused digital agency. 
+                      We specialise in solving problems to produce intelligent designs, deliver engaging experiences and build meaningful connections.We work with great clients all over the world to create thoughtful and purposeful products.</p>
                   </div>
-                  <div class="tab_panel_section">
-                    <div class="tab_panel_subtitle">Requirements</div>
-                    <ul class="tab_panel_bullets">
-                      <li>Lorem Ipsn gravida nibh vel velit auctor aliquet. Class aptent taciti sociosquad litora torquent.</li>
-                      <li>Cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a.</li>
-                      <li>Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat.</li>
-                      <li>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</li>
-                    </ul>
-                  </div>
-                  <div class="tab_panel_section">
-                    <div class="tab_panel_subtitle">What is the target audience?</div>
-                    <div class="tab_panel_text">
-                      <p>This course is intended for anyone interested in learning to master his or her own body.This course is aimed at beginners, so no previous experience with hand balancing skillts is necessary Aenean viverra tincidunt nibh, in imperdiet nunc. Suspendisse eu ante pretium, consectetur leo at, congue quam. Nullam hendrerit porta ante vitae tristique. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+                  <div class="future-service">
+                    <div class="row">
+                      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap"> <img class="img-responsive" src="assets/images/websites.gif" alt="Web Development Company India">
+                          <div class="team_subtitle">
+                            <h4 class="team_title">Web Development</h4>
+                            <p>We deliver a range of web development solutions. These includes CMS like Wordpress, Joomla, Drupal, etc.  Framework like CodeIgniter (CI), Laravel, Symfony, Zend Framework (ZF) etc., Customization and core coding.</p>
+                            <div class="service-more">
+                              <h4><a >Read More</a></h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!--/.col-md-4-->
+                      
+                      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap"> <img class="img-responsive" src="assets/images/design.gif" alt="Web Design Company India">
+                          <div class="team_subtitle">
+                            <h4>Web Designing</h4>
+                            <p>We get creative and You get noticed. One-Page or sales page, static or dynamic, mobile app or responsive, every design, any design all you get with quality and uniqueness. PSD to any HTML or CMS, Responsive, building beautiful websites.</p>
+                            <div class="service-more">
+                              <h4><a >Read More</a></h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!--/.col-md-4-->
+                      
+                      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap"> <img class="img-responsive" src="assets/images/mobile.gif" alt="Mobile App Company India">
+                          <div class="team_subtitle">
+                            <h4>Mobile App</h4>
+                            <p>We are expert in both Android and iOS Application development. We also provide native as well as hybrid. We specialize in cross platform mobile application development. We'll develop the app to your specifications.</p>
+                            <div class="service-more">
+                              <h4><a >Read More</a></h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!--/.col-md-4--> 
                     </div>
-                  </div>                  
+                    <!-- row end -->
+                   
+                    
+                      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap"> <img class="img-responsive" src="assets/images/support.gif" alt="Support India">
+                          <div class="team_subtitle">
+                            <h4>Support</h4>
+                            <p>Our support team fulfill your needs like quick fix of your website, design, apps, or need someone to teach or suggest you to manage things around your any applications, maintains your applications, export-import, backup of data etc. with prompt response.</p>
+                            <div class="service-more">
+                              <h4><a >Read More</a></h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!--/.col-md-4--> 
+                    </div>
+                    <!--/.row--> 
                 </div>
               </div>
-
-              <!-- Curriculum -->
-              <div class="tab_panel tab_panel_2">
-                <div class="tab_panel_content">
-                  <div class="tab_panel_title">Services</div>
-                  <div class="tab_panel_content">
-                    <div class="tab_panel_text">
-                      <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
-                    </div>
-                    <!-- Dropdowns -->
-                    <ul class="dropdowns">
-                      <li class="has_children">
-                        <div class="dropdown_item">
-                          <div class="dropdown_item_title"><span>Lecture 1:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                          <div class="dropdown_item_text">
-                            <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                          </div>
-                        </div>
-                        <ul>
-                          <li>
-                            <div class="dropdown_item">
-                              <div class="dropdown_item_title"><span>Lecture 1.1:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                              <div class="dropdown_item_text">
-                                <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                              </div>
-                            </div>
-                          </li>
-                          <li>
-                            <div class="dropdown_item">
-                              <div class="dropdown_item_title"><span>Lecture 1.2:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                              <div class="dropdown_item_text">
-                                <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                              </div>
-                            </div>
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="has_children">
-                        <div class="dropdown_item">
-                          <div class="dropdown_item_title"><span>Lecture 2:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                          <div class="dropdown_item_text">
-                            <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                          </div>
-                        </div>
-                        <ul>
-                          <li>
-                            <div class="dropdown_item">
-                              <div class="dropdown_item_title"><span>Lecture 2.1:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                              <div class="dropdown_item_text">
-                                <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                              </div>
-                            </div>
-                          </li>
-                          <li>
-                            <div class="dropdown_item">
-                              <div class="dropdown_item_title"><span>Lecture 2.2:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                              <div class="dropdown_item_text">
-                                <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                              </div>
-                            </div>
-                          </li>
-                        </ul>
-                      </li>
-                      <li>
-                        <div class="dropdown_item">
-                          <div class="dropdown_item_title"><span>Lecture 3:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                          <div class="dropdown_item_text">
-                            <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                          </div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="dropdown_item">
-                          <div class="dropdown_item_title"><span>Lecture 4:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                          <div class="dropdown_item_text">
-                            <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                          </div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="dropdown_item">
-                          <div class="dropdown_item_title"><span>Lecture 5:</span> Lorem Ipsn gravida nibh vel velit auctor aliquet.</div>
-                          <div class="dropdown_item_text">
-                            <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                          </div>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
-        </div>
       </div>   
     </div>
   </div>
