Home page changes

--- a/frontend/src/app/_layout/front/footer/footer.component.html
+++ b/frontend/src/app/_layout/front/footer/footer.component.html
@@ -6,16 +6,17 @@
       <div class="col">
         <div class="footer_content">
           <div class="row">
-            <div class="col-lg-6 footer_col">					
+            <div class="col-lg-6 footer_col">
               <!-- Footer About -->
               <div class="footer_section footer_about">
                 <div class="footer_logo_container">
                   <a href="#">
-                    <div class="footer_logo_text">Yashva<span>nt</span></div>
+                    <div class="footer_logo_text">Yash <span>Compusoft</span></div>
                   </a>
                 </div>
                 <div class="footer_about_text">
-                  <p>Lorem ipsum dolor sit ametium, consectetur adipiscing elit.</p>
+                  <p>is the most powerful effective incredible powerful Data Services and Software Development
+                    Organization.</p>
                 </div>
                 <div class="footer_social">
                   <ul>
@@ -25,21 +26,21 @@
                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                   </ul>
                 </div>
-              </div>								
+              </div>
             </div>
-            <div class="col-lg-6 footer_col">					
+            <div class="col-lg-6 footer_col">
               <!-- Footer Contact -->
               <div class="footer_section footer_contact">
                 <div class="footer_title">Contact Us</div>
                 <div class="footer_contact_info">
                   <ul>
                     <li>Email: yashvanty@gmail.com</li>
-                    <li>Phone:  +(91) 9642796505</li>
+                    <li>Phone: +(91) 9642796505</li>
                     <li>E-301, GIDC, Gandhinagar, Gujarat-382016</li>
                   </ul>
                 </div>
-              </div>								
-            </div>							
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -47,11 +48,14 @@
     <div class="row copyright_row">
       <div class="col">
         <div class="copyright d-flex flex-lg-row flex-column align-items-center justify-content-start">
-          <div class="cr_text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+          <div class="cr_text">
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;
+            <script>document.write(new Date().getFullYear());</script> All rights reserved
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          </div>
           <div class="ml-lg-auto cr_links">
-            <ul class="cr_list">								
+            <ul class="cr_list">
               <li><a href="#">Terms of Use</a></li>
               <li><a href="#">Privacy Policy</a></li>
             </ul>
