--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-				
+
 </div>
 <!-- Features -->
 <div class="features">
@@ -7,112 +7,156 @@
     <div class="row">
       <div class="col">
         <div class="section_title_container text-center">
-          <h2 class="section_title">Welcome To Yashvant</h2>
-          <div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>
+          <h2 class="section_title"></h2>
+
         </div>
       </div>
     </div>
-    <div class="row features_row">				
-      <!-- Features Item -->
-      <div class="col-lg-4 feature_col">
-        <div class="feature text-center trans_400">
-          <div class="feature_icon"><img src="assets/images/icon_1.png" alt=""></div>
-          <h3 class="feature_title">IT Consulting</h3>
-          <div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-        </div>
-      </div>
-      <!-- Features Item -->
-      <div class="col-lg-4 feature_col">
-        <div class="feature text-center trans_400">
-          <div class="feature_icon"><img src="assets/images/icon_2.png" alt=""></div>
-          <h3 class="feature_title">IT Solutions</h3>
-          <div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-        </div>
-      </div>
-      <!-- Features Item -->
-      <div class="col-lg-4 feature_col">
-        <div class="feature text-center trans_400">
-          <div class="feature_icon"><img src="assets/images/icon_3.png" alt=""></div>
-          <h3 class="feature_title">IT Products</h3>
-          <div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-        </div>
-      </div>
-      
-    </div>
+
   </div>
 </div>
 <div class="team">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="section_title_container text-center">
-						<h2 class="section_title">Technologies we work</h2>
-						<div class="section_subtitle"><p>We are an end-to-end technology solution development company helping clients in developing custom mobile & web solutions along with backend development, cloud deployment and custom integrations</p></div>
-					</div>
-				</div>
-			</div>
-			<div class="row team_row">
-				
-				<!-- Team Item -->
-				<div class="col-lg-3 col-md-6 team_col">
-					<div class="team_item">
-						<div class="team_body">
-                <div class="team_title"><strong>Php Technology</strong></div>						
-							<div class="team_image">
-								<ul>
-									<li><img src="assets/images/mysql-php-logos.png" alt=""></li>									
-								</ul>
-              </div>              
-						</div>
-					</div>
-				</div>
-
-				<!-- Team Item -->
-				<div class="col-lg-3 col-md-6 team_col">
-					<div class="team_item">
-						<div class="team_body">	
-                <div class="team_title"><strong>Codeigniter</strong></div>						
-							<div class="team_image">
-								<ul>
-                  <li><img src="assets/images/Codeigniter.png" alt=""></li>
-								</ul>
-							</div>
-						</div>
-					</div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="section_title_container text-center">
+          <h2 class="section_title">Technologies we work</h2>
+          <div class="section_subtitle">
+            <p>We are an end-to-end technology solution development company helping clients in developing custom mobile
+              & web solutions along with backend development, cloud deployment and custom integrations</p>
+          </div>
         </div>
-        
-        <!-- Team Item -->
-				<div class="col-lg-3 col-md-6 team_col">
-            <div class="team_item">
-              <div class="team_body">	
-                  <div class="team_title"><strong>Angular</strong></div>						
-                <div class="team_image">
-                  <ul>
-                    <li><img src="assets/images/angular-js-logo.png" alt=""></li>
-                  </ul>
-                </div>
-              </div>
+      </div>
+    </div>
+    <div class="row team_row">
+
+      <!-- Team Item -->
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="team_body">
+            <div class="team_title"><strong>Php Technology</strong></div>
+            <div class="team_image">
+              <ul>
+                <li><img src="assets/images/mysql-php-logos.png" alt=""></li>
+              </ul>
             </div>
           </div>
+        </div>
+      </div>
 
-           <!-- Team Item -->
-				<div class="col-lg-3 col-md-6 team_col">
-            <div class="team_item">
-              <div class="team_body">	
-                  <div class="team_title"><strong>Node Js</strong></div>						
-                <div class="team_image">
-                  <ul>
-                    <li><img src="assets/images/nodejs-logo.png" alt=""></li>
-                  </ul>
-                </div>
-              </div>
+      <!-- Team Item -->
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="team_body">
+            <div class="team_title"><strong>Codeigniter</strong></div>
+            <div class="team_image">
+              <ul>
+                <li><img src="assets/images/Codeigniter.png" alt=""></li>
+              </ul>
             </div>
           </div>
+        </div>
+      </div>
 
-			
+      <!-- Team Item -->
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="team_body">
+            <div class="team_title"><strong>Angular</strong></div>
+            <div class="team_image">
+              <ul>
+                <li><img src="assets/images/angular-js-logo.png" alt=""></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 
-		
+      <!-- Team Item -->
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="team_body">
+            <div class="team_title"><strong>Node Js</strong></div>
+            <div class="team_image">
+              <ul>
+                <li><img src="assets/images/nodejs-logo.png" alt=""></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-			</div>
-		</div>
-	</div>
+<div class="team">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="section_title_container text-center">
+          <h2 class="mt-xl mb-none">Our <strong>Focus &amp; Features</strong></h2>
+          <p class="lead mb-xl">There are so many reasons to choose Yash Compusoft, here are a few:</p>
+        </div>
+      </div>
+    </div>
+    <div class="row team_row">
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="feature-box feature-box-style-6">
+            <div class="feature-box-info">
+              <h4 class="pt-xs"><strong class="semi-bold"><i class="fa fa-check text-color-primary"></i> Consultancy
+                  Services</strong></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="feature-box feature-box-style-6">
+            <div class="feature-box-info">
+              <h4 class="pt-xs"><strong class="semi-bold"><i class="fa fa-check text-color-primary"></i>Data Management</strong></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="feature-box feature-box-style-6">
+            <div class="feature-box-info">
+              <h4 class="pt-xs"><strong class="semi-bold"><i class="fa fa-check text-color-primary"></i>Dedicated Teams</strong></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="feature-box feature-box-style-6">
+            <div class="feature-box-info">
+              <h4 class="pt-xs"><strong class="semi-bold"><i class="fa fa-check text-color-primary"></i>Latest
+                  Methodologies</strong></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="feature-box feature-box-style-6">
+            <div class="feature-box-info">
+              <h4 class="pt-xs"><strong class="semi-bold"><i class="fa fa-check text-color-primary"></i>24/7 Support</strong></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="feature-box feature-box-style-6">
+            <div class="feature-box-info">
+              <h4 class="pt-xs"><strong class="semi-bold"><i class="fa fa-check text-color-primary"></i>Flexible
+                  Schedules</strong></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
