--- a/frontend/src/app/_layout/front/header/header.component.html
+++ b/frontend/src/app/_layout/front/header/header.component.html
@@ -66,22 +66,7 @@
     </div>
   </div>
   <!-- Header Search Panel -->
-  <div class="header_search_container">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="header_search_content d-flex flex-row align-items-center justify-content-end">
-            <form action="#" class="header_search_form">
-              <input type="search" class="search_input" placeholder="Search" required="required">
-              <button class="header_search_button d-flex flex-column align-items-center justify-content-center">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
 </header>
 <!-- Menu -->
 <div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400">
@@ -91,19 +76,12 @@
       <div></div>
     </div>
   </div>
-  <div class="search">
-    <form action="#" class="header_search_form menu_mm">
-      <input type="search" class="search_input menu_mm" placeholder="Search" required="required">
-      <button class="header_search_button d-flex flex-column align-items-center justify-content-center menu_mm">
-        <i class="fa fa-search menu_mm" aria-hidden="true"></i>
-      </button>
-    </form>
-  </div>
   <nav class="menu_nav">
     <ul class="menu_mm">
-      <li class="menu_mm"><a href="index.html">Home</a></li>
-      <li class="menu_mm"><a href="#">About</a></li>
-      <li class="menu_mm"><a href="contact.html">Contact</a></li>
+      <li class="menu_mm"><a routerLink="/">Home</a></li>
+      <li class="menu_mm"><a routerLink="/home/about">About Us</a></li>
+      <li class="menu_mm"><a routerLink="/home/services">Services</a></li>
+      <li class="menu_mm"><a routerLink="/home/contact">Contact US</a></li>
     </ul>
   </nav>
 </div>
