--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -1,64 +1,48 @@
 <div class="home">
-		<div class="breadcrumbs_container">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<div class="breadcrumbs">
-							<ul>
-								<li><a routerLink="/">Home</a></li>
-								<li>About</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>			
-	</div>
+  <div class="breadcrumbs_container">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="breadcrumbs">
+            <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li>About Us</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="about">
   <div class="container">
     <div class="row">
       <div class="col">
         <div class="section_title_container text-center">
           <h2 class="section_title">About US</h2>
-          <div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu Vestibulum</p></div>
         </div>
       </div>
     </div>
-    <div class="row about_row">
-      
+    <div class="row">
       <!-- About Item -->
-      <div class="col-lg-4 about_col about_col_left">
+      <div class="col-lg-12 about_col about_col_left">
         <div class="about_item">
-          <div class="about_item_image"><img src="assets/images/about_1.jpg" alt=""></div>
-          <div class="about_item_title"><a href="#">Our Stories</a></div>
           <div class="about_item_text">
-            <p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim en consectet adipisi elit, sed do consectet adipisi elit, sed doadesg.</p>
+            <p>Yash Compusoft India having team of professional PHP developers has good expertise in PHP and is always
+              ready to cater for your needs at any level of Customized Web Application services as well as maintenance
+              work in PHP. At Yash Compusoft India, you can get services on Codeigniter, Yii, CakePHP, Wordpress,
+              Joomla, Opencart, Angular, Nodejs etc. And can deliver you a web application in any open source as per
+              your custom needs.
+              Making website user friendly, efficient and affordable is always been our core aim before delivering the
+              project to the clients. A highly popular programming language for building dynamic, database-driven
+              websites.
+
+              In delivering high quality professional IT services to our customers for 2 years, we've gained unmatched
+              experience and technological know-how. Such unique experience makes a strong basis for future
+              developments and guarantees stability. Ensuring a high level of satisfaction among our customers and
+              partners is a core motive at Yash Compusoft India</p>
           </div>
         </div>
       </div>
-
-      <!-- About Item -->
-      <div class="col-lg-4 about_col about_col_middle">
-        <div class="about_item">
-          <div class="about_item_image"><img src="assets/images/about_2.jpg" alt=""></div>
-          <div class="about_item_title"><a href="#">Our Mission</a></div>
-          <div class="about_item_text">
-            <p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim en consectet adipisi elit, sed do consectet adipisi elit, sed doadesg.</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- About Item -->
-      <div class="col-lg-4 about_col about_col_right">
-        <div class="about_item">
-          <div class="about_item_image"><img src="assets/images/about_3.jpg" alt=""></div>
-          <div class="about_item_title"><a href="#">Our Vision</a></div>
-          <div class="about_item_text">
-            <p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim en consectet adipisi elit, sed do consectet adipisi elit, sed doadesg.</p>
-          </div>
-        </div>
-      </div>
-
     </div>
   </div>
-</div>
