--- a/frontend/src/app/_layout/front/header/header.component.html
+++ b/frontend/src/app/_layout/front/header/header.component.html
@@ -13,11 +13,11 @@
                 </li>
                 <li>
                   <i class="fa fa-phone" aria-hidden="true"></i>
-                  <div>+91-9642796505</div>
+                  <div><a href="skype:yashvant.yadav?call" class="emaillink">+91-9642796505</a></div>
                 </li>
                 <li>
                   <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  <div>yashvanty@gmail.com</div>
+                  <div><a href="mailto:yashvanty@gmail.com" class="emaillinktop">yashvanty@gmail.com</a></div>
                 </li>
               </ul>
               <div class="top_bar_login ml-auto">
@@ -47,9 +47,9 @@
             <nav class="main_nav_contaner ml-auto">
               <ul class="main_nav">
                 <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/">Home</a></li>
-                <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home/services">Services</a></li>
                 <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home/about">About
                     Us</a></li>
+                <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home/services">Services</a></li>
                 <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home/contact">Contact
                     US</a></li>
               </ul>
