--- a/frontend/src/app/_layout/front/footer/footer.component.html
+++ b/frontend/src/app/_layout/front/footer/footer.component.html
@@ -6,7 +6,7 @@
       <div class="col">
         <div class="footer_content">
           <div class="row">
-            <div class="col-lg-6 footer_col">
+            <div class="col-lg-4 footer_col">
               <!-- Footer About -->
               <div class="footer_section footer_about">
                 <div class="footer_logo_container">
@@ -28,14 +28,25 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 footer_col">
+            <div class="col-lg-4 footer_col">
+              <!-- Footer Contact -->
+              <div class="footer_section footer_contact">
+                <div class="footer_title">About Us</div>
+                <div class="footer_about_text">
+                  <p>Yash Compusoft India having team of professional PHP developers has good expertise in PHP and is
+                    always ready to cater for your needs at any level of Customized Web Application services as well as
+                    maintenance work in PHP...</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 footer_col">
               <!-- Footer Contact -->
               <div class="footer_section footer_contact">
                 <div class="footer_title">Contact Us</div>
                 <div class="footer_contact_info">
                   <ul>
-                    <li>Email: yashvanty@gmail.com</li>
-                    <li>Phone: +(91) 9642796505</li>
+                    <li>Email: <a href="mailto:yashvanty@gmail.com" class="emaillink">yashvanty@gmail.com</a></li>
+                    <li>Phone: <a href="skype:yashvant.yadav?call" class="emaillink">+(91) 9642796505</a></li>
                     <li>E-301, GIDC, Gandhinagar, Gujarat-382016</li>
                   </ul>
                 </div>
