website name changes

--- a/frontend/src/app/_layout/front/footer/footer.component.html
+++ b/frontend/src/app/_layout/front/footer/footer.component.html
@@ -11,7 +11,7 @@
               <div class="footer_section footer_about">
                 <div class="footer_logo_container">
                   <a href="#">
-                    <div class="footer_logo_text">Yash <span>Compusoft</span></div>
+                    <div class="footer_logo_text">MS <span>TECHNOLOGYS</span></div>
                   </a>
                 </div>
                 <div class="footer_about_text">
@@ -33,7 +33,7 @@
               <div class="footer_section footer_contact">
                 <div class="footer_title">About Us</div>
                 <div class="footer_about_text">
-                  <p>Yash Compusoft India having team of professional PHP developers has good expertise in PHP and is
+                  <p>MS Technologys India having team of professional PHP developers has good expertise in PHP and is
                     always ready to cater for your needs at any level of Customized Web Application services as well as
                     maintenance work in PHP...</p>
                 </div>
@@ -45,7 +45,7 @@
                 <div class="footer_title">Contact Us</div>
                 <div class="footer_contact_info">
                   <ul>
-                    <li>Email: <a href="mailto:yashvanty@gmail.com" class="emaillink">yashvanty@gmail.com</a></li>
+                    <li>Email: <a href="mailto:info@mstechnologys.com" class="emaillink">info@mstechnologys.com</a></li>
                     <li>Phone: <a href="skype:yashvant.yadav?call" class="emaillink">+(91) 9642796505</a></li>
                     <li>E-301, GIDC, Gandhinagar, Gujarat-382016</li>
                   </ul>
@@ -62,7 +62,10 @@
           <div class="cr_text">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved
+            <script>
+              document.write(new Date().getFullYear());
+
+            </script> All rights reserved
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </div>
           <div class="ml-lg-auto cr_links">
