--- a/frontend/src/app/_layout/front/header/header.component.html
+++ b/frontend/src/app/_layout/front/header/header.component.html
@@ -17,7 +17,7 @@
                 </li>
                 <li>
                   <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  <div><a href="mailto:yashvanty@gmail.com" class="emaillinktop">yashvanty@gmail.com</a></div>
+                  <div><a href="mailto:info@mstechnologys.com" class="emaillinktop">info@mstechnologys.com</a></div>
                 </li>
               </ul>
               <div class="top_bar_login ml-auto">
@@ -38,7 +38,7 @@
           <div class="header_content d-flex flex-row align-items-center justify-content-start">
             <div class="logo_container">
               <a href="#">
-                <div class="logo_text"><span><img src="assets/images/logo1.png" alt="Yash Compusoft"></span>
+                <div class="logo_text"><span><img src="assets/images/logo1.png" alt="MS TECHNOLOGYS"></span>
                   <!--Yashva<span>nt</span>-->
                 </div>
 
