--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -66,7 +66,7 @@
               <ul class="location_list">
                 <li>E-301, GIDC, Gandhinagar, Gujarat-382016</li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="skype:yashvant.yadav?call" class="contactlink">+91-9642796505</a></li>
-                <li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:yashvanty@gmail.com" class="contactlink">yashvanty@gmail.com</a></li>
+                <li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@mstechnologys.com" class="contactlink">info@mstechnologys.com</a></li>
               </ul>
             </div>
             <div class="contact_info" #map style="height:400px;width:400px">
