--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -85,6 +85,42 @@
           </div>
         </div>
       </div>
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="team_body">
+            <div class="team_title"><strong>Mongo DB</strong></div>
+            <div class="team_image">
+              <ul>
+                <li><img src="assets/images/mongodb-logo.png" alt=""></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="team_body">
+            <div class="team_title"><strong>Cake PHP</strong></div>
+            <div class="team_image">
+              <ul>
+                <li><img src="assets/images/cakephp-icon.png" alt=""></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 team_col">
+        <div class="team_item">
+          <div class="team_body">
+            <div class="team_title"><strong>YII</strong></div>
+            <div class="team_image">
+              <ul>
+                <li><img src="assets/images/yii.png" alt=""></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -95,7 +131,7 @@
       <div class="col">
         <div class="section_title_container text-center">
           <h2 class="mt-xl mb-none">Our <strong>Focus &amp; Features</strong></h2>
-          <p class="lead mb-xl">There are so many reasons to choose Yash Compusoft, here are a few:</p>
+          <p class="lead mb-xl">There are so many reasons to choose MS Technologys, here are a few:</p>
         </div>
       </div>
     </div>
